<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
   <package format="3">
   <name>rox_diff_kinematics</name>
   <version>1.0.0</version>
   <description>transformation node for neobotix rox robots with differential drive ROS 2</description>
   <author>Pradheep Padmanabhan</author>
   <maintainer email="ros@neobotix.de">Pradheep Padmanabhan</maintainer>
   <license>BSD</license>

   <buildtool_depend>ament_cmake</buildtool_depend>

   <exec_depend>rclcpp</exec_depend>
   <exec_depend>rclcpp_action</exec_depend>
   <exec_depend>rclcpp_lifecycle</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>nav_msgs</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>neo_msgs2</exec_depend>
   <exec_depend>trajectory_msgs</exec_depend>
   <exec_depend>tf2</exec_depend>
   <exec_depend>tf2_ros</exec_depend>

   <export>
     <build_type>ament_cmake</build_type>
   </export>
</package>
